@@ -5,6 +5,7 @@ Changelog
 0.3-dev - (unreleased)
 ----------------------
  * Bug fix: Removed deprecated ToolInit param product_name [voineali #4139]
+ * Bug fix: Fixed DeprecationWarning: CMFCorePermissions [voineali #4139]
 
 0.2 - (2011-02-23)
 ------------------
